--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                     <a class="nav-link" href="upcoming-events.html">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a>
+                    <a class="nav-link" href="cc_atfiu.html">Code Crunch at FIU</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cc_global.html">Code Crunch GLOBAL</a>
                 </li>
 
                 <li class="nav-item">
@@ -125,134 +128,33 @@
         <section class="pt-4">
             <div class="container px-lg-5">
                 <div class="row gx-lg-5">
-                    <!-- Become a Member Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Become a Member</h2>
-                                <p class="mb-0">Join our club to gain access to exclusive events, resources, and a community of like-minded peers.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the membership sign-up.</p>
-                                <p class="mt-3"><strong>After Sign-Up:</strong> Upon submitting the form, you will receive a welcome email that includes:</p>
-                                <ul class="text-start mt-2">
-                                    <li>Link to join our <strong>Discord</strong> community.</li>
-                                    <li>Link to join Code Crunch on <strong>Panther Connect</strong>.</li>
-                                    <li><strong>Google Drive folder</strong> access granted weekly.</li>
-                                    <li><strong>Notion workspace</strong> access granted weekly (next Monday).</li>
-                                </ul>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Become a Member</a>
+
+
+
+                        <!-- Global Code Crunch Card -->
+                        <div class="col-lg-6 mb-5">
+                            <div class="card bg-light border-0 h-100">
+                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                    <h2 class="fs-4 fw-bold">Code Crunch Global</h2>
+                                    <p class="mb-0">Connect with coders around the world through our virtual platforms.</p>
+                                    <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">Join Global Events</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
-                    <!-- Upcoming Events Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Upcoming Events</h2>
-                                <p class="mb-0">Check out and register for our upcoming events on Luma by clicking the link below.</p>
-                                <p class="mt-3"><strong>Stay tuned for exciting workshops, club meetings, and coding sessions!</strong></p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">View and Register for Events</a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <!-- Attendance Form Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Attendance Form</h2>
-                                <p class="mb-0">Mark your attendance for meetings and events by following the steps provided in our <strong>Onboarding Guide</strong>.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to submit attendance.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="onboarding-guide.html" target="_blank">Go to Onboarding Guide</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Feedback Form Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Feedback Form</h2>
-                                <p class="mb-0">We value your feedback! Share your thoughts on our events and suggest improvements.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to submit feedback.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/H5vtXACK6j" target="_blank">Give Feedback</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Meeting RSVP Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
-                                <p class="mb-0">Let us know you're attending our upcoming <strong>special in-person events</strong> like panelist discussions, HackRank sessions with software engineers, or special events featuring goodies and lunch.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
-                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the event</strong> takes place. If not, you might not be able to secure your spot.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Join Discord Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Join Our Discord</h2>
-                                <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community.</p>
-                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to join Discord.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Sign Up</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- LinkedIn Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Follow Us on LinkedIn</h2>
-                                <p class="mb-0">Connect with us professionally on LinkedIn for club updates, networking opportunities, and more!</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Visit LinkedIn</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Instagram Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Follow Us on Instagram</h2>
-                                <p class="mb-0">Stay updated on our latest events, highlights, and club activities by following us on Instagram.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://www.instagram.com/codecrunchclub/" target="_blank">Visit Instagram</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Google Docs Folder Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Google Docs Folder</h2>
-                                <p class="mb-0">Access is only available for current members. Access to our shared Google Drive folder is granted weekly, every Monday, after you become a member.</p>
-                                <p class="mt-3"><strong>Note:</strong> If you cannot view the documents, please request access through Google or contact one of the club admins to grant you the necessary permissions.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing" target="_blank">Open Google Drive</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Notion Workspace Card -->
-                    <div class="col-lg-6 col-xxl-4 mb-5">
-                        <div class="card bg-light border-0 h-100">
-                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Notion Workspace</h2>
-                                <p class="mb-0">Access is only available for current members. Access to our Notion workspace is granted weekly, every Monday, after you become a member.</p>
-                                <p class="mt-3">Stay tuned for updates and highlights. Our Notion workspace is currently under construction.</p>
+                        
+                        <!-- Code Crunch at FIU Card -->
+                        <div class="col-lg-6 mb-5">
+                            <div class="card bg-light border-0 h-100">
+                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                    <h2 class="fs-4 fw-bold">Code Crunch at FIU</h2>
+                                    <p class="mb-0">Participate in on-campus events and workshops exclusively for FIU students.</p>
+                                    <a class="btn btn-primary btn-lg mt-3" href="https://fiu.edu" target="_blank">Explore FIU Events</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
