--- a/Attendance-GLOBAL-guide.html
+++ b/Attendance-GLOBAL-guide.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Code Crunch - Meeting Onboarding Guide" />
+        <meta name="description" content="Code Crunch - Meeting Attendance Guide" />
         <meta name="author" content="Code Crunch" />
         <title>Onboarding Guide - Code Crunch</title>
         <!-- Favicon-->
@@ -83,7 +83,10 @@
                             <a class="nav-link" href="upcoming-events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="onboarding-guide.html">Onboarding Guide</a>
+                            <a class="nav-link" href="cc_atfiu.html">Code Crunch at FIU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cc_global.html">Code Crunch GLOBAL</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -97,7 +100,7 @@
         <header class="py-5 bg-light">
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
-                    <h1 class="display-5 fw-bold">Code Crunch Meeting Onboarding Guide</h1>
+                    <h1 class="display-5 fw-bold">Code Crunch GLOBAL Meeting Attendance Guide</h1>
                     <p class="fs-4">Steps for new and current members to prepare for our club meetings.</p>
                 </div>
             </div>
