--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,12 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="upcoming-events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cc_atfiu.html">Code Crunch at FIU</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cc_global.html">Code Crunch GLOBAL</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -69,6 +74,17 @@
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <h1 class="display-5 fw-bold">Contact Code Crunch</h1>
                     <p class="fs-4">Have any questions or need more information? Reach out to us using the form below!</p>
+                
+                <!-- Social Media Links -->
+                <div class="social-media-links mt-3">
+                    <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
+                        <i class="bi bi-instagram"></i> Instagram
+                    </a>
+                </div>
+                
                 </div>
             </div>
         </header>
