--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -92,6 +92,9 @@
             border-top: 2px solid #000;
             margin: 10px auto;
         }
+
+
+        /* <div class="divider"></div> */
     </style>
 </head>
 
@@ -109,9 +112,14 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="upcoming-events.html">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="upcoming-events.html">Events</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cc_atfiu.html">Code Crunch at FIU</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cc_global.html">Code Crunch GLOBAL</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link " href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -122,17 +130,18 @@
         <div class="container px-lg-5">
             <div class="p-4 p-lg-5 rounded-3 text-center">
                 <h1 class="display-5 fw-bold">Upcoming Events</h1>
-                <div class="divider"></div>
-                <div class="social-links-inline">
-                    <a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">
-                        <i class="bi bi-linkedin"></i> LinkedIn
-                    </a>
-                    <a href="https://www.instagram.com/codecrunchclub/" target="_blank">
-                        <i class="bi bi-instagram"></i> Instagram
-                    </a>
-                </div>
-                <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
+            <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
+            
+            <!-- Social Media Links -->
+            <div class="social-media-links mt-3">
+                <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
+                    <i class="bi bi-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
+                    <i class="bi bi-instagram"></i> Instagram
+                </a>
             </div>
+
         </div>
     </header>
 
