--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                     <h2 class="fs-4 fw-bold">Code Crunch Global</h2>
                                     <p class="mb-0">Connect with coders around the world through our virtual platforms.</p>
-                                    <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">Join Global Events</a>
+                                    <a class="btn btn-primary btn-lg mt-3" href="cc_global.html" target="_blank">Join Global Events</a>
                                 </div>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                     <h2 class="fs-4 fw-bold">Code Crunch at FIU</h2>
                                     <p class="mb-0">Participate in on-campus events and workshops exclusively for FIU students.</p>
-                                    <a class="btn btn-primary btn-lg mt-3" href="https://fiu.edu" target="_blank">Explore FIU Events</a>
+                                    <a class="btn btn-primary btn-lg mt-3" href="cc_atfiu.html" target="_blank">Explore FIU Events</a>
                                 </div>
                             </div>
                         </div>
