--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
                 width: 1px;
                 background-color: rgba(255, 255, 255, 0.5); /* Adjust color as needed */
             }
+
+            .header-container {
+                background-color: #f8f9fa; /* Light, neutral background */
+                padding: 3rem 1rem; /* More vertical padding for better emphasis */
+                border-radius: 0.5rem; /* Soft rounded corners */
+                box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Light shadow for depth */
+            }
+
+            .header-title {
+                font-size: 2.5rem; /* Slightly larger for emphasis */
+                color: #0056b3; /* Deep blue, offering a professional yet vibrant look */
+            }
+
+            .header-subtitle {
+                font-size: 1.2rem;
+                color: #333; /* Ensuring good readability */
+                margin-top: 1rem; /* Adding space between paragraphs */
+            }
+
+
+
         </style>
     </head>
     <body>
@@ -106,15 +127,21 @@
             <img src="assets/images/logo.png" alt="Code Crunch Logo" />
         </div>
 
-        <!-- Header-->
-        <header class="py-5 bg-light">
-            <div class="container px-lg-5">
-                <div class="p-4 p-lg-5 rounded-3 text-center">
-                    <h1 class="display-5 fw-bold">Welcome to Code Crunch</h1>
-                    <p class="fs-4">Your go-to place for coding, collaboration, and community, empowering Florida International University (FIU) students to connect, learn, and innovate together.</p>
-                </div>
-            </div>
-        </header>
+<!-- Header -->
+<header class="py-5 bg-light">
+    <div class="container px-lg-5">
+        <div class="p-4 p-lg-5 rounded-3 text-center">
+            <h1 class="display-5 fw-bold">Welcome to Code Crunch</h1>
+            <p class="fs-4">
+                Bridging global innovation and local engagement, Code Crunch offers a dynamic platform for all university students—from FIU and beyond. Join us to break down barriers in technology, participate in coding workshops, engage in community-driven projects, and prepare for the future with hands-on experiences both virtually and on campus.
+            </p>
+            <p>
+                Whether you're tuning in from across the globe or joining us at Florida International University, we provide resources and a community to support your growth as a coder and innovator.
+            </p>
+        </div>
+    </div>
+</header>
+
 
         <!-- Group Photo Section -->
         <section class="group-photo py-5">
