--- a/about.html
+++ b/about.html
@@ -100,15 +100,19 @@
             </div>
         </header>
 
-        <!-- About Section-->
+            <!-- About Section-->
         <section class="pt-4">
             <div class="container px-lg-5">
                 <div class="row gx-lg-5">
                     <div class="col-lg-12">
                         <h2 class="fw-bold text-center">Club Description</h2>
                         <p class="text-center">Founded in August 2024, Code Crunch is a student-led club at Florida International University (FIU) dedicated to providing a collaborative and inclusive environment for students interested in coding and technology. Our mission is to enhance coding skills, foster innovation, and build a strong, diverse tech community at FIU. We are committed to supporting minorities, people of color, and individuals of all genders. Whether you're a beginner or an experienced coder, our club offers a space for everyone to learn, grow, and connect with like-minded peers through workshops, coding challenges, and networking events.</p>
+                        <p class="text-center mt-3">Excitingly, in October, we are launching Code Crunch Global, allowing any college student worldwide to join us virtually. This initiative aims to break down geographical barriers and make our coding workshops, LeetCode sessions, and panel discussions accessible to a broader audience. Code Crunch Global is an opportunity for students everywhere to enhance their technical skills and prepare for interviews in a supportive, community-driven environment.</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
 
                 <!-- Executive Board-->
                 <div class="row gx-lg-5 pt-5 justify-content-center">
