--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
             <p>
                 Whether you're tuning in from across the globe or joining us at Florida International University, we provide resources and a community to support your growth as a coder and innovator.
             </p>
+                    <!-- Social Media Links -->
+                    <div class="social-media-links mt-3">
+                        <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
+                            <i class="bi bi-linkedin"></i> LinkedIn
+                        </a>
+                        <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
+                            <i class="bi bi-instagram"></i> Instagram
+                        </a>
+                    </div>
         </div>
+        
+
     </div>
 </header>
 
