--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -133,10 +133,10 @@
                         
                         <br>
                         
-                        <h2>24 Hours Before Each Club Meeting:</h2>
+                        <h2>RSVP Before Each Club Meeting:</h2>
                         <ul class="steps-list">
-                            <li>RSVP via <strong><a href="https://lu.ma/codecrunch">LUMA</a></strong> the meeting <strong>(for special events, this helps us estimate attendance for giveaways, food, etc. Don't forget!)</strong>. You can RSVP in advance for weekly meetings.</li>
-                            <li>You can RSVP for all the meetings in advance.</li>
+                            <li>RSVP for the meeting <strong>(for special events, this helps us estimate attendance for giveaways, food, etc. Don't forget!)</strong>. You can RSVP in advance for weekly meetings.</li>
+                            <li>You can RSVP for all meetings available in advance on <a href="https://lu.ma/CODECRUNCH">Luma</a>.</li>
                         </ul>
 
                     </div>
