--- a/index.html
+++ b/index.html
@@ -162,37 +162,37 @@
             </div>
         </section>
 
-        <!-- Page Content-->
-        <section class="pt-4">
-            <div class="container px-lg-5">
-                <div class="row gx-lg-5">
-
-
+            <!-- Page Content -->
+            <section class="pt-4">
+                <div class="container px-lg-5">
+                    <div class="row gx-lg-5">
 
                         <!-- Global Code Crunch Card -->
                         <div class="col-lg-6 mb-5">
                             <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <div class="card-body text-center p-4 p-lg-5">
                                     <h2 class="fs-4 fw-bold">Code Crunch Global</h2>
-                                    <p class="mb-0">Connect with coders around the world through our virtual platforms.</p>
-                                    <a class="btn btn-primary btn-lg mt-3" href="cc_global.html" target="_blank">Join Global Events</a>
+                                    <p class="mb-0">Join a global community of coders and connect with like-minded individuals from around the world through our virtual platforms.</p>
+                                    <a class="btn btn-primary btn-lg mt-3" href="cc_global.html" target="_blank">All University Students</a>
                                 </div>
                             </div>
                         </div>
-                        
+
                         <!-- Code Crunch at FIU Card -->
                         <div class="col-lg-6 mb-5">
                             <div class="card bg-light border-0 h-100">
-                                <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <div class="card-body text-center p-4 p-lg-5">
                                     <h2 class="fs-4 fw-bold">Code Crunch at FIU</h2>
-                                    <p class="mb-0">Participate in on-campus events and workshops exclusively for FIU students.</p>
-                                    <a class="btn btn-primary btn-lg mt-3" href="cc_atfiu.html" target="_blank">Explore FIU Events</a>
+                                    <p class="mb-0">Engage in exclusive on-campus events and workshops designed for FIU students, offering hands-on learning and collaboration.</p>
+                                    <a class="btn btn-primary btn-lg mt-3" href="cc_atfiu.html" target="_blank">FIU Students</a>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </section>
+
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
