--- a/cc_atfiu.html
+++ b/cc_atfiu.html
@@ -165,10 +165,10 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Upcoming Events</h2>
                                 
-                                <p class="mt-3"><strong>For both physical and virtual events, RSVP and register on our Luma events page, where you will find detailed location information and more.</strong></p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP and Register via Luma</a><br>
+                                <p class="mt-3"><strong>For both physical and virtual events, RSVP on Luma events page, where you will find detailed location information and more.</strong></p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP on Luma</a><br>
 
-                                <p class="mt-3 mb-0">Explore our variety of workshops, club meetings, and coding sessions. Our Events tab provides all necessary Zoom links for virtual participation.</p>
+                                <p class="mt-3 mb-0">Our Events tab provides all necessary Zoom links for virtual participation.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="upcoming-events.html" target="_blank">Events</a>
                             </div>
                         </div>
