--- a/cc_global.html
+++ b/cc_global.html
@@ -150,14 +150,14 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Become a Member</h2>
                                 <p class="mb-0">Join our club to gain access to exclusive events, resources, and a community of like-minded peers.</p>
-                                <p class="mt-3"><strong>Note:</strong> student is required to complete the membership sign-up.</p>
+                                <p class="mt-3"><strong>Note:</strong> student email is required to complete the membership sign-up.</p>
                                 <p class="mt-3"><strong>After Sign-Up:</strong> Upon submitting the form, you will receive a welcome email that includes:</p>
                                 <ul class="text-start mt-2">
                                     <li>Link to join our <strong>Discord</strong> community after student email verification.</li>
                                     <li><strong>Google Drive folder</strong> access granted weekly.</li>
                                     <li><strong>Notion workspace</strong> access granted weekly (next Monday).</li>
                                 </ul>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Become a Member</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/ha9NMpfbJi4Gp7ds5" target="_blank">Become a Member</a>
                             </div>
                         </div>
                     </div>
@@ -170,10 +170,10 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Upcoming Events</h2>
                                 
-                                <p class="mt-3"><strong>For both physical and virtual events, RSVP and register on our Luma events page, where you will find detailed location information and more.</strong></p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP and Register via Luma</a><br>
+                                <p class="mt-3"><strong>For both physical and virtual events, RSVP on our Luma events page, where you will find detailed location information and more.</strong></p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP on Luma</a><br>
 
-                                <p class="mt-3 mb-0">Explore our variety of workshops, club meetings, and coding sessions. Our Events tab provides all necessary Zoom links for virtual participation.</p>
+                                <p class="mt-3 mb-0">Our Events tab provides all necessary Zoom links for virtual participation.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="upcoming-events.html" target="_blank">Events</a>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Feedback Form</h2>
                                 <p class="mb-0">We value your feedback! Share your thoughts on our events and suggest improvements.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/H5vtXACK6j" target="_blank">Give Feedback</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/5Z8Pha7G7d2kfoFY9" target="_blank">Give Feedback</a>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                                 <h2 class="fs-4 fw-bold">Join Our Discord</h2>
                                 <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community.</p>
                                 <p class="mt-3"><strong>Note:</strong> Student email is required to join Discord.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Sign Up</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/kMAC8ftU5JunzdF46" target="_blank">Sign Up</a>
                             </div>
                         </div>
                     </div>
