--- a/cc_atfiu.html
+++ b/cc_atfiu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Code Crunch - Home" />
+        <meta name="description" content="Code Crunch at FIU- Home" />
         <meta name="author" content="Code Crunch" />
         <title>Home - Code Crunch</title>
         <!-- Favicon-->
