--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -265,8 +265,8 @@
                 title: '🚀 SWE Session with Corey Rizzi-Wise from Goldman Sachs! 🚀',
                 description: `📅 Date: October 17th<br>
             ⏰ Time: 11 AM EST<br>
-            📍 Virtual Location: The virtual meeting link will be available on the event's calendar on our club's website.<br>
-            🏢 In-Person Location: TAM Room 107 (Limited Capacity)<br><br>
+            🏢 In-Person Location (Limited Capacity) &📍 Virtual Location: RSVP & find the location on <a href="https://lu.ma/CODECRUNCH" target="_blank">Luma</a><br>
+            <br>
             About This Session: Join us for an exclusive HackerRank Prep Session led by Corey Rizzi-Wise, Vice President of Data Engineering at Goldman Sachs. This session will be available both virtually and in-person, offering you flexible ways to participate. Dive deep into strategies for acing HackerRank assessments and excelling at technical interviews.<br><br>
             What You Will Learn:<br>
             🎯 Insights on HackerRank’s Assessment Criteria: Understand what top firms seek in candidates.<br>
