--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                                 <h5 class="fw-bold mt-4">Bryan Garcia</h5>
                                 <p class="mb-0">Treasurer & RSOC Representative</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science. Bryan is passionate about leadership and financial management, ensuring that the club runs smoothly and efficiently.</p>
-                                <a href="https://www.linkedin.com/in/bryan-garcia" target="_blank" class="linkedin-icon">
+                                <a href="https://www.linkedin.com/in/bryan-bg-garcia/" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
                                 </a>
                             </div>
