--- a/about.html
+++ b/about.html
@@ -148,6 +148,10 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body">
                                 <i class="bi bi-person-circle" style="font-size: 150px; color: gray;"></i> <!-- Icon for Bryan -->
+                                <img class="card-img-top" src="https://github.com/user-attachments/assets/a41ae753-facc-4735-a368-6fa3e6b38239" alt="Bryan Garcia - Treasurer & RSOC Representative" />
+                            <!-- Icon for Bryan 
+                             <i class="bi bi-person-circle" style="font-size: 150px; color: gray;"></i> <!-- Icon for Bryan -->
+                            -->
                                 <h5 class="fw-bold mt-4">Bryan Garcia</h5>
                                 <p class="mb-0">Treasurer & RSOC Representative</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science. Bryan is passionate about leadership and financial management, ensuring that the club runs smoothly and efficiently.</p>
