--- a/about.html
+++ b/about.html
@@ -148,7 +148,8 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body">
                                 <i class="bi bi-person-circle" style="font-size: 150px; color: gray;"></i> <!-- Icon for Bryan -->
-                                <img class="card-img-top" src="https://github.com/user-attachments/assets/a41ae753-facc-4735-a368-6fa3e6b38239?raw=true" alt="Bryan Garcia - Treasurer & RSOC Representative" />
+                                <img class="card-img-top img-fluid" src="https://github.com/user-attachments/assets/a41ae753-facc-4735-a368-6fa3e6b38239?raw=true" alt="Bryan Garcia - Treasurer & RSOC Representative" />
+
                             
                             
                                 <h5 class="fw-bold mt-4">Bryan Garcia</h5>
