--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 
                     <div class="col-lg-3 col-md-6 mb-5">
                         <div class="card bg-light border-0 h-100">
-                            <img class="card-img-top" src="https://raw.githubusercontent.com/ba-00001/imagesforWEB-1/main/treasurer-rsoc.jpg" alt="Bryan Garcia - Treasurer & RSOC Representative" />
+                            <img class="card-img-top" src="https://github.com/ba-00001/imagesforWEB-1/blob/main/Treasurer%26RSOC%20Representative.JPG?raw=true" alt="Bryan Garcia - Treasurer & RSOC Representative" />
                             <div class="card-body">
                                 <h5 class="fw-bold">Bryan Garcia</h5>
                                 <p class="mb-0">Treasurer & RSOC Representative</p>
