--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -287,7 +287,7 @@
             title: '🎉 SWE Convos with Emely Rosario, Software Engineer at UKG! 🎉',
             description: `📅 Date: Friday, November 1<br>
                     🕓 Time: 4:00 PM - 5:00 PM EST<br>
-                    📍 Location: FIU GC Room 316 (in-person) or join us on Zoom<br>
+                    📍 Location: FIU GC Room 278A (in-person) or join us on Zoom<br>
                     <br>
                     Open to All University Students! 🌎<br><br>
                     About This Session: We’re excited to host Emely Rosario as part of our SWE Convos series! Emely will be sharing her journey as a Software Engineer, offering insights on navigating the tech industry, and providing valuable tips for acing technical interviews. Whether you’re pursuing an internship, a full-time role, or simply looking to grow your skills, this is an event you don’t want to miss!<br><br>
@@ -297,7 +297,7 @@
                     🔹 Meeting ID: 832 1825 8610<br>
                     🔹 ZOOM passcode: CODEFALL24<br><br>
                     Don’t miss out on this opportunity to connect, learn, and network with fellow students and industry professionals. See you there! 🚀`,
-            location: 'FIU GC Room 316 (in-person) or join us on Zoom',
+            location: 'FIU GC Room 278A (in-person) or join us on Zoom',
             zoom: 'https://fiu.zoom.us/meeting/register/tZcvduGqqzMsG9T__LKSHRQ8CiyWsvUIKybJ#/registration',
             //imageLink: `<a href="https://github.com/user-attachments/assets/emely-session-image"><img src="https://github.com/user-attachments/assets/emely-session-image" alt="FIU Code Crunch: SWE Convos with Emely Rosario" style="width:100%;"></a>`
         };
