--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             .logo-container {
                 text-align: center;
                 background-color: #5072a7; /* Match the background color of the logo */
-                padding: 40px 0;
+                padding: 5px 0;
             }
             .logo-container img {
-                height: 200px; /* Twice the original size */
+                height: 300px; /* Twice the original size */
             }
 
             .navbar-brand img {
@@ -87,7 +87,7 @@
     <div class="container px-lg-5">
         <!-- Logo and Brand Name -->
         <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Logo" />
             Code Crunch
         </a>
         <!-- Toggler for mobile view -->
@@ -124,7 +124,7 @@
 
         <!-- Logo section below the navbar -->
         <div class="logo-container">
-            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Logo" />
         </div>
 
 <!-- Header -->
