--- a/cc_atfiu.html
+++ b/cc_atfiu.html
@@ -66,7 +66,7 @@
     <div class="container px-lg-5">
         <!-- Logo and Brand Name -->
         <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Logo" />
             Code Crunch
         </a>
         <!-- Toggler for mobile view -->
