--- a/cc_global.html
+++ b/cc_global.html
@@ -69,9 +69,9 @@
     <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-lg-5">
-        <!-- Logo and Brand Name -->
+        <!-- Logo and Brand Name assets/images/logo.png -->
         <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Logo" /> 
             Code Crunch
         </a>
         <!-- Toggler for mobile view -->
