--- a/Attendance-FIU-guide.html
+++ b/Attendance-FIU-guide.html
@@ -58,6 +58,8 @@
             .steps-list a:hover {
                 text-decoration: underline;
             }
+ 
+            
         </style>
     </head>
     <body>
@@ -103,6 +105,28 @@
                     <h1 class="display-5 fw-bold">Code Crunch Meeting Attendance Guide</h1>
                     <p class="fs-4">Steps for new and current members to prepare for our club meetings.</p>
                 </div>
+
+            <!-- Social Media Links -->
+            <div class="d-flex justify-content-center mt-3">
+                <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
+                    <i class="bi bi-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
+                    <i class="bi bi-instagram"></i> Instagram
+                </a>
+                <a href="https://chat.whatsapp.com/FpZ7HbKOjMt1hbShM5QUjg" class="btn btn-success mx-2" aria-label="WhatsApp">
+                    <i class="bi bi-whatsapp"></i> WhatsApp
+                </a>
+                <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary mx-2" aria-label="Discord">
+                    <i class="bi bi-discord"></i> Discord
+                </a>
+                <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark mx-2" aria-label="Linktree">
+                    <i class="bi bi-link"></i> Linktree
+                </a>
+            </div>
+
+
+
             </div>
         </header>
 
