--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -133,12 +133,21 @@
             <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
             
             <!-- Social Media Links -->
-            <div class="social-media-links mt-3">
+            <div class="d-flex justify-content-center mt-3">
                 <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary mx-2" aria-label="LinkedIn">
                     <i class="bi bi-linkedin"></i> LinkedIn
                 </a>
                 <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
                     <i class="bi bi-instagram"></i> Instagram
+                </a>
+                <a href="https://chat.whatsapp.com/FpZ7HbKOjMt1hbShM5QUjg" class="btn btn-success mx-2" aria-label="WhatsApp">
+                    <i class="bi bi-whatsapp"></i> WhatsApp
+                </a>
+                <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary mx-2" aria-label="Discord">
+                    <i class="bi bi-discord"></i> Discord
+                </a>
+                <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark mx-2" aria-label="Linktree">
+                    <i class="bi bi-link"></i> Linktree
                 </a>
             </div>
 
