--- a/cc_atfiu.html
+++ b/cc_atfiu.html
@@ -120,7 +120,7 @@
                     <a href="https://www.instagram.com/codecrunchclub/" class="btn btn-danger mx-2" aria-label="Instagram">
                         <i class="bi bi-instagram"></i> Instagram
                     </a>
-                    <a href="https://chat.whatsapp.com/FpZ7HbKOjMt1hbShM5QUjg" class="btn btn-success mx-2" aria-label="WhatsApp">
+                    <a href="https://forms.office.com/r/M5itd5FK32" class="btn btn-success mx-2" aria-label="WhatsApp">
                         <i class="bi bi-whatsapp"></i> WhatsApp
                     </a>
                     <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary mx-2" aria-label="Discord">
