--- a/index.html
+++ b/index.html
@@ -88,21 +88,25 @@
             .countdown-section {
                 flex: 0 0 40%;
                 text-align: left;
+                align-items: center;
             }
 
             .countdown-section h1 {
                 font-size: 2.5rem;
                 font-weight: bold;
+                align-items: center;
             }
 
             .countdown {
                 font-size: 1.8rem;
                 margin-top: 20px;
+                align-items: center;
             }
 
             .image-section {
                 flex: 0 0 55%;
                 text-align: center;
+                align-items: center;
             }
 
             .image-section img {
