--- a/Attendance-GLOBAL-guide.html
+++ b/Attendance-GLOBAL-guide.html
@@ -83,12 +83,6 @@
                             <a class="nav-link" href="upcoming-events.html">Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cc_atfiu.html">Code Crunch at FIU</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cc_global.html">Code Crunch GLOBAL</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -101,6 +95,7 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <h1 class="display-5 fw-bold">Code Crunch GLOBAL Meeting Attendance Guide</h1>
+                    <h1 class="display-5 fw-bold">Any University Student</h1>
                     <p class="fs-4">Steps for new and current members to prepare for our club meetings.</p>
                 </div>
 
