--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 <li><strong>Google Drive folder</strong> access granted weekly.</li>
                                 <li><strong>Notion workspace</strong> access granted weekly (Available soon).</li>
                             </ul>
-                            <a class="btn btn-primary btn-lg mt-3" href="all-attendance.html" target="_blank">Become a Member</a>
+                            <a class="btn btn-primary btn-lg mt-3" href="all-become-a-member.html" target="_blank">Become a Member</a>
                         </div>
                     </div>
                 </div>
