--- a/events.html
+++ b/events.html
@@ -93,6 +93,19 @@
             margin: 10px auto;
         }
 
+        /* Luma calendar*/
+        .iframe-container {
+        text-align: center; /* Centers the iframe horizontally */
+        }
+
+        .iframe-container iframe {
+            width: 100%; /* Makes it responsive */
+            max-width: 1200px; /* Optional: Sets a maximum width */
+            height: 450px; /* Set the desired height */
+            border: 1px solid #bfcbda88; /* Optional: Add border for styling */
+            border-radius: 4px; /* Optional: Rounded corners */
+            margin: 0 auto; /* Centers the iframe */
+        }
 
         /* <div class="divider"></div> */
     </style>
@@ -112,7 +125,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="upcoming-events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="events.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link " href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -153,8 +166,45 @@
         </div>
     </header>
 
-    <!-- Container for Calendar -->
+<!-- Calendar Section -->
+<div class="container">
+    <h2 class="text-center my-4">Code Crunch - Luma Event RSVP</h2>
+    <p class="text-center">
+        Stay updated with Code Crunch events! RSVP for both physical and virtual meetings on the Luma events page by clicking on the event you want to attend. 
+        
+    </p>
+    <p class="text-center">
+        Find detailed location information and more by clicking on each event below.
+    </p>
+    <p class="text-center">
+        Zoom event registration links can be found below on the "Code Crunch - Monthly Event Calendar" for the selected month or Luma Event description.
+    </p>
+
+    <div ></div>
+</div>
+
+
+
+        <!-- Luma Calendar Content -->
+        <section class="content-section">
+            <div class="container px-lg-5">
+                <div class="iframe-container">
+                    <iframe
+                        src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?lt=light"
+                        frameborder="0"
+                        allowfullscreen=""
+                        aria-hidden="false"
+                        tabindex="0"
+                    ></iframe>
+                </div>
+            </div>
+        </section>
+
+
+
+    <!-- Calendar Section -->
     <div class="container">
+        <h2 class="text-center my-4">Code Crunch - Monthly Event Calendar</h2>
         <div id="calendar"></div>
     </div>
 
