--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="upcoming-events.html">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
 
         
