--- a/index.html
+++ b/index.html
@@ -267,6 +267,63 @@
     <div class="container px-lg-5">
         <div class="row gx-lg-5 justify-content-center">
 
+
+            <!-- 
+        305 Hackathon: A fall hackathon inspired by Miami's iconic area code. 
+        It includes daily workshops from Monday to Friday, followed by the hackathon from Friday evening to Sunday evening.
+        -->
+        <div class="card text-center my-4">
+            <div class="card-header bg-primary text-white">
+                <h3>Code Crunch - 305 Hackathon</h3>
+            </div>
+            <div class="card-body">
+                <h4 class="card-title">Fall 2025 Hackathon</h4>
+                <p class="card-text">
+                    Represent the 305! Join us for a weekend of innovation, collaboration, and creativity right from Miami’s vibrant tech scene.
+                </p>
+                <p class="card-text">
+                    <strong>Workshops:</strong> Daily sessions from Monday to Friday to sharpen your skills.  
+                    <strong>Hackathon:</strong> Starts on <strong>Friday, September 12, 2025, at 7 PM</strong> and ends on <strong>Sunday, September 14, 2025, at 7 PM</strong>.
+                </p>
+                <p class="card-text">
+                    Bring your A-game and showcase your skills in the heart of the 305. Whether you’re a beginner or a pro, this hackathon is for everyone!
+                </p>
+                <a href="all-305-Hackathon.html" class="btn btn-warning">Register Now</a>
+            </div>
+            <div class="card-footer text-muted">
+                September 12–14, 2025
+            </div>
+        </div>
+
+            <!-- 
+            Tropical Spring Hack: A spring hackathon that embodies Miami's vibrant tropical energy. 
+            It includes workshops throughout the week, followed by the hackathon from Friday evening to Sunday evening.
+            -->
+            <div class="card text-center my-4">
+                <div class="card-header bg-success text-white">
+                    <h3>Code Crunch - Tropical Spring Hack</h3>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Spring 2026 Hackathon</h4>
+                    <p class="card-text">
+                        Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.
+                    </p>
+                    <p class="card-text">
+                        <strong>Workshops:</strong> Daily sessions from Monday to Friday to prep you for the big weekend.  
+                        <strong>Hackathon:</strong> Starts on <strong>Friday, March 14, 2026, at 7 PM</strong> and ends on <strong>Sunday, March 16, 2026, at 7 PM</strong>.
+                    </p>
+                    <p class="card-text">
+                        Dive into the tropical Miami spirit, code with fellow innovators, and let your ideas bloom this spring.
+                    </p>
+                    <a href="all-tropical-spring-hack.html" class="btn btn-warning">Register Now</a>
+                </div>
+                <div class="card-footer text-muted">
+                    March 14–16, 2026
+                </div>
+            </div>
+
+
+
                    <!-- Become a Member Card -->
                    <div class="col-lg-6 col-xxl-4 mb-5">
                     <div class="card bg-light border-0 h-100">
