--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                 <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP on Luma</a><br>
 
                                 <p class="mt-3 mb-0">Our Events tab provides all necessary Zoom links for virtual participation.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="upcoming-events.html" target="_blank">Events</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="events.html" target="_blank">Events</a>
                             </div>
                         </div>
                     </div>
