--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <section class="group-photo py-5">
             <div class="container px-lg-5 text-center">
                 <h2 class="fw-bold mb-4">Meet Our Club</h2>
-                <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/GROUPclubpic.png?raw=true" alt="Code Crunch Club Group Photo" class="img-fluid rounded" />
+                <img src="https://github.com/user-attachments/assets/3cc0162a-0596-4d51-a59a-b135efc28d80" alt="Code Crunch Club Group Photo" class="img-fluid rounded" />
             </div>
         </section>
 
